[package]
name = "torrent-client"
version = "0.1.0"
authors = ["VxDxK"]
edition = "2021"
repository = "https://github.com/VxDxK/vdk-torrent-client"
keywords = ["torrent", "torrent-client"]
categories = ["network-programming"]

[dependencies]
bencode = {path = "../bencode" }
url = "2.5.2"
percent-encoding = "2.3.1"
thiserror = "1.0"
clap = {version = "4.5.8", features = ["derive"]}
sha1 = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }
rand = "0.8.5"
